--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prettier": "^3.3.3",
+    "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -25,7 +26,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "redux": "^5.0.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
